[tool.poetry]
name = "telegram-bot3"
version = "0.1.0"
description = "Telegram bot"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "3.11.9"
python-telegram-bot = "20.7"
SQLAlchemy = "2.0.32"
psycopg2-binary = "2.9.9"
httpx = "0.25.2"
anyio = "4.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
