[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "Telegram bot with PostgreSQL"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
python-telegram-bot = "20.7"
SQLAlchemy = "2.0.32"
psycopg2-binary = "2.9.9"
httpx = "0.25.2"

[tool.poetry.dev-dependencies]
# Здесь можно добавить dev-зависимости, например для тестирования

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
